Closed Bug 397728 Opened 17 years ago Closed 17 years ago

reversed logic in nsAccessible::IsValid()

Categories

(Core :: Disability Access APIs, defect)

x86
All
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: ginnchen+exoracle, Assigned: ginnchen+exoracle)

References

Details

(Keywords: access)

Attachments

(1 file)

In accerciser, select a link in tree view panel.

In IPython Console,
enter
lnk = acc.queryHyperlink()
print lnk.isValid()

Should get True
Actual result is False
Attached patch patchSplinter Review
Attachment #282495 - Flags: review?(aaronleventhal)
Attachment #282495 - Flags: review?(aaronleventhal) → review+
Attachment #282495 - Flags: approval1.9?
Attachment #282495 - Flags: approval1.9? → approval1.9+
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: