Bug 397728 revesed logic in nsAccessible::IsValid r=aaronleventhal a=dsicore